overflow problem solved

--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -59,6 +59,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow: hidden;
 }
 
 #siteName,
